Mouse up updates scrollbar hovered part if needed.

BUG=671214
TEST=WebFrameTest.MouseReleaseUpdatesScrollbarHoveredPart

Review-Url: https://codereview.chromium.org/2587563002
Cr-Commit-Position: refs/heads/master@{#439628}

Former-commit-id: db90376264139744e86f2fbc55ead46c2d55bf15